# ECC

./: CMakeLists.txt  README.md  test.py  test2.py
.cache/clangd/index/: arithmetic.c.53EF7C4D30348364.idx  arithmetic.h.772ED280D3186269.idx  main.c.EAD9C3FE03B5D637.idx  pedersenTest.c.7B30664451FCDEA3.idx  sigTest.c.09F39847FC4DB8F8.idx
header/: arithmetic.h
src/: arithmetic.c  main  main.c  pedersenTest.c  sigTest.c
